# libsodium

./: CMakeLists.txt  README.markdown
builds/: .gitignore
src/: CMakeLists.txt
src/libsodium/: CMakeLists.txt
src/libsodium/crypto_core/curve25519/ref10/: curve25519_ref10.c
src/libsodium/crypto_stream/salsa2012/ref/: stream_salsa2012_ref.c
src/libsodium/include/: CMakeLists.txt
src/libsodium/include/sodium/: CMakeLists.txt
src/libsodium/sodium/: utils.c
test/default/: CMakeLists.txt
